Refresh the code review and add AiChat to competitive research
CODE_REVIEW.md was dated 2026-08-23 and out of step with what had
actually shipped since (group chat's ViewModel migration, PNG import,
world-book editing, dark theme, swipe versions, backup/restore) --
it still listed those as open debt. Rewritten against the current
tree with fresh evidence, and records this round's three fixes
(group chat stop button, SSE parser resilience, persistence-layer
test coverage) plus what's still open (ChatActivity's size, the
OpenAI-only provider abstraction, performance/device evidence).

COMPETITIVE_RESEARCH.md gains an AiChat (github.com/dghiffjd7/AiChat,
AGPL-3.0, Tauri v2 + Vue3) entry. It targets a much larger surface
than JavaTavern by design (image generation, moments/feed, a
general-purpose agent), so most of its feature list is out of scope
on purpose -- but two of its reliability patterns (validating a
reply before it touches storage, atomic local writes) line up
directly with gaps this round's own code reading found, so they're
recorded as lessons independent of chasing its feature scope.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>